--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1|^8.0",
         "symfony/http-kernel": "^3.2|^4.0|^5.0"
     },
     "require-dev": {
         "symfony/dependency-injection": "^3.2|^4.0|^5.0",
-        "phpunit/phpunit": "^5.6.4",
+        "phpunit/phpunit": "^9",
+        "phpspec/prophecy-phpunit": "^2",
         "friendsofphp/php-cs-fixer": "^2.0",
         "mmoreram/php-formatter": "^1.3.1"
     },
@@ -28,14 +29,5 @@
         "psr-4": {
             "Mmoreram\\SymfonyBundleDependencies\\": ""
         }
-    },
-    "scripts": {
-        "fix-code": [
-            "vendor/bin/php-cs-fixer fix --config-file=.php_cs",
-            "vendor/bin/php-formatter f:h:f . --exclude=vendor",
-            "vendor/bin/php-formatter f:s:f . --exclude=vendor",
-            "vendor/bin/php-formatter f:u:s . --exclude=vendor"
-        ],
-        "test": "vendor/bin/phpunit"
     }
 }
